@@ -1203,11 +1203,11 @@ SampHold_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
     
     INIT_INPUT_STREAM
     
-    Py_XDECREF(self->controlsig); \
-    self->controlsig = controlsigtmp; \
-    controlsig_streamtmp = PyObject_CallMethod((PyObject *)self->controlsig, "_getStream", NULL); \
-    Py_INCREF(controlsig_streamtmp); \
-    Py_XDECREF(self->controlsig_stream); \
+    Py_XDECREF(self->controlsig);
+    self->controlsig = controlsigtmp;
+    controlsig_streamtmp = PyObject_CallMethod((PyObject *)self->controlsig, "_getStream", NULL);
+    Py_INCREF(controlsig_streamtmp);
+    Py_XDECREF(self->controlsig_stream);
     self->controlsig_stream = (Stream *)controlsig_streamtmp;
     
     if (valuetmp) {
@@ -1390,6 +1390,383 @@ SampHold_members,                                 /* tp_members */
 0,                          /* tp_init */
 0,                                              /* tp_alloc */
 SampHold_new,                                     /* tp_new */
+};
+
+/************/
+/* TrackHold */
+/************/
+typedef struct {
+    pyo_audio_HEAD
+    PyObject *input;
+    Stream *input_stream;
+    PyObject *controlsig;
+    Stream *controlsig_stream;
+    PyObject *value;
+    Stream *value_stream;
+    MYFLT currentValue;
+    int flag;
+    int modebuffer[3]; // need at least 2 slots for mul & add 
+} TrackHold;
+
+static void
+TrackHold_filters_i(TrackHold *self) {
+    MYFLT ctrl;
+    int i;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    MYFLT *ctrlsig = Stream_getData((Stream *)self->controlsig_stream);
+    MYFLT val = PyFloat_AS_DOUBLE(self->value);
+
+    for (i=0; i<self->bufsize; i++) {
+        ctrl = ctrlsig[i];
+        if (ctrl > (val - 0.0001) && ctrl < (val + 0.0001)) {
+            if (self->flag == 1) {
+                self->currentValue = in[i];
+                self->flag = 0;
+            }    
+        }
+        else {
+            self->currentValue = in[i];
+            self->flag = 1;
+        }
+        self->data[i] = self->currentValue;
+    }
+}
+
+static void
+TrackHold_filters_a(TrackHold *self) {
+    MYFLT ctrl, val;
+    int i;
+    MYFLT *in = Stream_getData((Stream *)self->input_stream);
+    MYFLT *ctrlsig = Stream_getData((Stream *)self->controlsig_stream);
+    MYFLT *valsig = Stream_getData((Stream *)self->value_stream);
+    
+    for (i=0; i<self->bufsize; i++) {
+        ctrl = ctrlsig[i];
+        val = valsig[i];
+        if (ctrl > (val - 0.0001) && ctrl < (val + 0.0001)) {
+            if (self->flag == 1) {
+                self->currentValue = in[i];
+                self->flag = 0;
+            }    
+        }
+        else {
+            self->currentValue = in[i];
+            self->flag = 1;
+        }
+        self->data[i] = self->currentValue;
+    }
+}
+
+static void TrackHold_postprocessing_ii(TrackHold *self) { POST_PROCESSING_II };
+static void TrackHold_postprocessing_ai(TrackHold *self) { POST_PROCESSING_AI };
+static void TrackHold_postprocessing_ia(TrackHold *self) { POST_PROCESSING_IA };
+static void TrackHold_postprocessing_aa(TrackHold *self) { POST_PROCESSING_AA };
+static void TrackHold_postprocessing_ireva(TrackHold *self) { POST_PROCESSING_IREVA };
+static void TrackHold_postprocessing_areva(TrackHold *self) { POST_PROCESSING_AREVA };
+static void TrackHold_postprocessing_revai(TrackHold *self) { POST_PROCESSING_REVAI };
+static void TrackHold_postprocessing_revaa(TrackHold *self) { POST_PROCESSING_REVAA };
+static void TrackHold_postprocessing_revareva(TrackHold *self) { POST_PROCESSING_REVAREVA };
+
+static void
+TrackHold_setProcMode(TrackHold *self)
+{
+    int procmode, muladdmode;
+    procmode = self->modebuffer[2];
+    muladdmode = self->modebuffer[0] + self->modebuffer[1] * 10;
+    
+	switch (procmode) {
+        case 0:    
+            self->proc_func_ptr = TrackHold_filters_i;
+            break;
+        case 1:    
+            self->proc_func_ptr = TrackHold_filters_a;
+            break;
+    } 
+	switch (muladdmode) {
+        case 0:        
+            self->muladd_func_ptr = TrackHold_postprocessing_ii;
+            break;
+        case 1:    
+            self->muladd_func_ptr = TrackHold_postprocessing_ai;
+            break;
+        case 2:    
+            self->muladd_func_ptr = TrackHold_postprocessing_revai;
+            break;
+        case 10:        
+            self->muladd_func_ptr = TrackHold_postprocessing_ia;
+            break;
+        case 11:    
+            self->muladd_func_ptr = TrackHold_postprocessing_aa;
+            break;
+        case 12:    
+            self->muladd_func_ptr = TrackHold_postprocessing_revaa;
+            break;
+        case 20:        
+            self->muladd_func_ptr = TrackHold_postprocessing_ireva;
+            break;
+        case 21:    
+            self->muladd_func_ptr = TrackHold_postprocessing_areva;
+            break;
+        case 22:    
+            self->muladd_func_ptr = TrackHold_postprocessing_revareva;
+            break;
+    }   
+}
+
+static void
+TrackHold_compute_next_data_frame(TrackHold *self)
+{
+    (*self->proc_func_ptr)(self); 
+    (*self->muladd_func_ptr)(self);
+}
+
+static int
+TrackHold_traverse(TrackHold *self, visitproc visit, void *arg)
+{
+    pyo_VISIT
+    Py_VISIT(self->input);
+    Py_VISIT(self->input_stream);
+    Py_VISIT(self->controlsig);
+    Py_VISIT(self->controlsig_stream);
+    Py_VISIT(self->value);    
+    Py_VISIT(self->value_stream);    
+    return 0;
+}
+
+static int 
+TrackHold_clear(TrackHold *self)
+{
+    pyo_CLEAR
+    Py_CLEAR(self->input);
+    Py_CLEAR(self->input_stream);
+    Py_CLEAR(self->controlsig);
+    Py_CLEAR(self->controlsig_stream);
+    Py_CLEAR(self->value);    
+    Py_CLEAR(self->value_stream);    
+    return 0;
+}
+
+static void
+TrackHold_dealloc(TrackHold* self)
+{
+    pyo_DEALLOC
+    TrackHold_clear(self);
+    self->ob_type->tp_free((PyObject*)self);
+}
+
+static PyObject *
+TrackHold_new(PyTypeObject *type, PyObject *args, PyObject *kwds)
+{
+    int i;
+    PyObject *inputtmp, *input_streamtmp, *controlsigtmp, *controlsig_streamtmp, *valuetmp=NULL, *multmp=NULL, *addtmp=NULL;
+    TrackHold *self;
+    self = (TrackHold *)type->tp_alloc(type, 0);
+    
+    self->value = PyFloat_FromDouble(0.0);
+    self->currentValue = 0.0;
+    self->flag = 1;
+	self->modebuffer[0] = 0;
+	self->modebuffer[1] = 0;
+	self->modebuffer[2] = 0;
+    
+    INIT_OBJECT_COMMON
+    Stream_setFunctionPtr(self->stream, TrackHold_compute_next_data_frame);
+    self->mode_func_ptr = TrackHold_setProcMode;
+
+    static char *kwlist[] = {"input", "controlsig", "value", "mul", "add", NULL};
+    
+    if (! PyArg_ParseTupleAndKeywords(args, kwds, "OO|OOO", kwlist, &inputtmp, &controlsigtmp, &valuetmp, &multmp, &addtmp))
+        Py_RETURN_NONE;
+    
+    INIT_INPUT_STREAM
+    
+    Py_XDECREF(self->controlsig);
+    self->controlsig = controlsigtmp;
+    controlsig_streamtmp = PyObject_CallMethod((PyObject *)self->controlsig, "_getStream", NULL);
+    Py_INCREF(controlsig_streamtmp);
+    Py_XDECREF(self->controlsig_stream);
+    self->controlsig_stream = (Stream *)controlsig_streamtmp;
+    
+    if (valuetmp) {
+        PyObject_CallMethod((PyObject *)self, "setValue", "O", valuetmp);
+    }
+    
+    if (multmp) {
+        PyObject_CallMethod((PyObject *)self, "setMul", "O", multmp);
+    }
+    
+    if (addtmp) {
+        PyObject_CallMethod((PyObject *)self, "setAdd", "O", addtmp);
+    }
+    
+    PyObject_CallMethod(self->server, "addStream", "O", self->stream);
+    
+    (*self->mode_func_ptr)(self);
+
+    return (PyObject *)self;
+}
+
+static PyObject * TrackHold_getServer(TrackHold* self) { GET_SERVER };
+static PyObject * TrackHold_getStream(TrackHold* self) { GET_STREAM };
+static PyObject * TrackHold_setMul(TrackHold *self, PyObject *arg) { SET_MUL };	
+static PyObject * TrackHold_setAdd(TrackHold *self, PyObject *arg) { SET_ADD };	
+static PyObject * TrackHold_setSub(TrackHold *self, PyObject *arg) { SET_SUB };	
+static PyObject * TrackHold_setDiv(TrackHold *self, PyObject *arg) { SET_DIV };	
+
+static PyObject * TrackHold_play(TrackHold *self, PyObject *args, PyObject *kwds) { PLAY };
+static PyObject * TrackHold_out(TrackHold *self, PyObject *args, PyObject *kwds) { OUT };
+static PyObject * TrackHold_stop(TrackHold *self) { STOP };
+
+static PyObject * TrackHold_multiply(TrackHold *self, PyObject *arg) { MULTIPLY };
+static PyObject * TrackHold_inplace_multiply(TrackHold *self, PyObject *arg) { INPLACE_MULTIPLY };
+static PyObject * TrackHold_add(TrackHold *self, PyObject *arg) { ADD };
+static PyObject * TrackHold_inplace_add(TrackHold *self, PyObject *arg) { INPLACE_ADD };
+static PyObject * TrackHold_sub(TrackHold *self, PyObject *arg) { SUB };
+static PyObject * TrackHold_inplace_sub(TrackHold *self, PyObject *arg) { INPLACE_SUB };
+static PyObject * TrackHold_div(TrackHold *self, PyObject *arg) { DIV };
+static PyObject * TrackHold_inplace_div(TrackHold *self, PyObject *arg) { INPLACE_DIV };
+
+static PyObject *
+TrackHold_setValue(TrackHold *self, PyObject *arg)
+{
+	PyObject *tmp, *streamtmp;
+	
+	if (arg == NULL) {
+		Py_INCREF(Py_None);
+		return Py_None;
+	}
+    
+	int isNumber = PyNumber_Check(arg);
+	
+	tmp = arg;
+	Py_INCREF(tmp);
+	Py_DECREF(self->value);
+	if (isNumber == 1) {
+		self->value = PyNumber_Float(tmp);
+        self->modebuffer[2] = 0;
+	}
+	else {
+		self->value = tmp;
+        streamtmp = PyObject_CallMethod((PyObject *)self->value, "_getStream", NULL);
+        Py_INCREF(streamtmp);
+        Py_XDECREF(self->value_stream);
+        self->value_stream = (Stream *)streamtmp;
+		self->modebuffer[2] = 1;
+	}
+    
+    (*self->mode_func_ptr)(self);
+    
+	Py_INCREF(Py_None);
+	return Py_None;
+}
+
+static PyMemberDef TrackHold_members[] = {
+{"server", T_OBJECT_EX, offsetof(TrackHold, server), 0, "Pyo server."},
+{"stream", T_OBJECT_EX, offsetof(TrackHold, stream), 0, "Stream object."},
+{"input", T_OBJECT_EX, offsetof(TrackHold, input), 0, "Input sound object."},
+{"controlsig", T_OBJECT_EX, offsetof(TrackHold, controlsig), 0, "Control input object."},
+{"value", T_OBJECT_EX, offsetof(TrackHold, value), 0, "Trigger value."},
+{"mul", T_OBJECT_EX, offsetof(TrackHold, mul), 0, "Mul factor."},
+{"add", T_OBJECT_EX, offsetof(TrackHold, add), 0, "Add factor."},
+{NULL}  /* Sentinel */
+};
+
+static PyMethodDef TrackHold_methods[] = {
+{"getServer", (PyCFunction)TrackHold_getServer, METH_NOARGS, "Returns server object."},
+{"_getStream", (PyCFunction)TrackHold_getStream, METH_NOARGS, "Returns stream object."},
+{"play", (PyCFunction)TrackHold_play, METH_VARARGS|METH_KEYWORDS, "Starts computing without sending sound to soundcard."},
+{"out", (PyCFunction)TrackHold_out, METH_VARARGS|METH_KEYWORDS, "Starts computing and sends sound to soundcard channel speficied by argument."},
+{"stop", (PyCFunction)TrackHold_stop, METH_NOARGS, "Stops computing."},
+{"setValue", (PyCFunction)TrackHold_setValue, METH_O, "Sets trigger value."},
+{"setMul", (PyCFunction)TrackHold_setMul, METH_O, "Sets oscillator mul factor."},
+{"setAdd", (PyCFunction)TrackHold_setAdd, METH_O, "Sets oscillator add factor."},
+{"setSub", (PyCFunction)TrackHold_setSub, METH_O, "Sets inverse add factor."},
+{"setDiv", (PyCFunction)TrackHold_setDiv, METH_O, "Sets inverse mul factor."},
+{NULL}  /* Sentinel */
+};
+
+static PyNumberMethods TrackHold_as_number = {
+(binaryfunc)TrackHold_add,                         /*nb_add*/
+(binaryfunc)TrackHold_sub,                         /*nb_subtract*/
+(binaryfunc)TrackHold_multiply,                    /*nb_multiply*/
+(binaryfunc)TrackHold_div,                                              /*nb_divide*/
+0,                                              /*nb_remainder*/
+0,                                              /*nb_divmod*/
+0,                                              /*nb_power*/
+0,                                              /*nb_neg*/
+0,                                              /*nb_pos*/
+0,                                              /*(unaryfunc)array_abs,*/
+0,                                              /*nb_nonzero*/
+0,                                              /*nb_invert*/
+0,                                              /*nb_lshift*/
+0,                                              /*nb_rshift*/
+0,                                              /*nb_and*/
+0,                                              /*nb_xor*/
+0,                                              /*nb_or*/
+0,                                              /*nb_coerce*/
+0,                                              /*nb_int*/
+0,                                              /*nb_long*/
+0,                                              /*nb_float*/
+0,                                              /*nb_oct*/
+0,                                              /*nb_hex*/
+(binaryfunc)TrackHold_inplace_add,                 /*inplace_add*/
+(binaryfunc)TrackHold_inplace_sub,                 /*inplace_subtract*/
+(binaryfunc)TrackHold_inplace_multiply,            /*inplace_multiply*/
+(binaryfunc)TrackHold_inplace_div,                                              /*inplace_divide*/
+0,                                              /*inplace_remainder*/
+0,                                              /*inplace_power*/
+0,                                              /*inplace_lshift*/
+0,                                              /*inplace_rshift*/
+0,                                              /*inplace_and*/
+0,                                              /*inplace_xor*/
+0,                                              /*inplace_or*/
+0,                                              /*nb_floor_divide*/
+0,                                              /*nb_true_divide*/
+0,                                              /*nb_inplace_floor_divide*/
+0,                                              /*nb_inplace_true_divide*/
+0,                                              /* nb_index */
+};
+
+PyTypeObject TrackHoldType = {
+PyObject_HEAD_INIT(NULL)
+0,                                              /*ob_size*/
+"_pyo.TrackHold_base",                                   /*tp_name*/
+sizeof(TrackHold),                                 /*tp_basicsize*/
+0,                                              /*tp_itemsize*/
+(destructor)TrackHold_dealloc,                     /*tp_dealloc*/
+0,                                              /*tp_print*/
+0,                                              /*tp_getattr*/
+0,                                              /*tp_setattr*/
+0,                                              /*tp_compare*/
+0,                                              /*tp_repr*/
+&TrackHold_as_number,                              /*tp_as_number*/
+0,                                              /*tp_as_sequence*/
+0,                                              /*tp_as_mapping*/
+0,                                              /*tp_hash */
+0,                                              /*tp_call*/
+0,                                              /*tp_str*/
+0,                                              /*tp_getattro*/
+0,                                              /*tp_setattro*/
+0,                                              /*tp_as_buffer*/
+Py_TPFLAGS_DEFAULT | Py_TPFLAGS_BASETYPE | Py_TPFLAGS_HAVE_GC | Py_TPFLAGS_CHECKTYPES, /*tp_flags*/
+"TrackHold objects. Let pass and freeze an audio stream.",           /* tp_doc */
+(traverseproc)TrackHold_traverse,                  /* tp_traverse */
+(inquiry)TrackHold_clear,                          /* tp_clear */
+0,                                              /* tp_richcompare */
+0,                                              /* tp_weaklistoffset */
+0,                                              /* tp_iter */
+0,                                              /* tp_iternext */
+TrackHold_methods,                                 /* tp_methods */
+TrackHold_members,                                 /* tp_members */
+0,                                              /* tp_getset */
+0,                                              /* tp_base */
+0,                                              /* tp_dict */
+0,                                              /* tp_descr_get */
+0,                                              /* tp_descr_set */
+0,                                              /* tp_dictoffset */
+0,                          /* tp_init */
+0,                                              /* tp_alloc */
+TrackHold_new,                                     /* tp_new */
 };
 
 /************/
