@@ -1,3 +1,8 @@
+2013-10-18 belangeo <belangeo@gmail.com>
+
+    * Added new object: TrackHold, Performs a 'thru' and hold on its input signal.
+    - rev 1143
+
 -------------------------------------------------------------------------------------
 
 2013-10-16 belangeo <belangeo@gmail.com>
